--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,10 @@ services:
     name: goal2gol-football-api
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT --workers 1 --timeout-keep-alive 75
     plan: free
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
+      - key: FD_TOKEN
+        sync: false   # Set manually in Render dashboard — never commit the actual key
